Fixed table data bug from leaking past the table, updated media queries to show both map and search form, changed font sizes and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,11 @@ th:last-child {
     float: right;
 }
 
+.card-body {
+    overflow: auto;
+    height: 250px;
+}
+
 /* X-Small devices (portrait phones, less 576px) */
 @media (max-width: 575px) {
     #map {
@@ -88,6 +93,7 @@ th:last-child {
 
     h2 {
         margin-bottom: 0;
+        font-size: 24px;
     }
 
     p {
@@ -104,6 +110,15 @@ th:last-child {
 
     input {
         text-align: center;
+    }
+
+    .card-body {
+        height: 150px;
+       
+    }
+
+    .card {
+        margin: 40px 30px 30px 30px;
     }
 }
 /* // Small devices (landscape phones, 576px and up) */
@@ -139,24 +154,38 @@ th:last-child {
     input {
         text-align: center;
     }
+
+    .card {
+        margin: 40px 30px 30px 30px;
+    }
 }
 
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
     form {
-        margin: 0 30px;
+        margin: 0 80px;
     }
 
     .card {
-        margin-left: 30px;
-        margin-right: 30px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    h2 {
+        margin-top: 10px;
     }
 }
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
+    #map {
+        height: 100vh;
+    }
     form {
-        margin: 0 50px;
+        margin: 0 80px;
+    }
+    h2 {
+        margin-top: 8vh;
     }
 }
 
@@ -164,7 +193,10 @@ th:last-child {
 @media (min-width: 1200px) { 
    
     form {
-        margin: 0 70px;
+        margin: 0 100px;
     }
 
+    h2 {
+        font-size: 36px;
+    }
 }
